 ! Refactoring package naming so its my email address
 + Added version checker
 
Version 1.1 | Tested on CB 1.4.5-R1.0
 ! Compatible with 1.4.5-R1.0 & 1.4.6-R0.1
 ! Now uses TapAPI v1.9.1
 = Fix with EntityDeathEvents
 = Fixed rare bug which could occur when Location data was lost
 + Added custom recipe for crafting masks
 + Added Hides player names from Tab list
 + Added time formatting. Time left is now displayed in hours/mins/secs
 + Added Assassin chat channel, Assassins can talk with each other. Neutral players will see messages scrambled.
 + Added prevent players from dropping Masks on the ground
 + Added some particle effects & config option to disable these
 + Added sound effect when Assassin mode activates / deactivates
 + Added a warning message when Assassin mode nearly runs out
 + Added potion effects when a Assassin respawns (& config option to disable this)
 + Added Vault support for charging money
 + Added config option to allow neutral pvp (pvp between non assassins)
 + Added config option to disable teleportation when Assassin Mode deactivates
 + Added config option to disable (teleport) commands when an Assassin
 - Removed status message when joining the game as a Neutral player


Version 1.0 | Tested on CB 1.4.5-R0.2
 + Added masks. Assassins get a mask which they can't take off
 + Added warning messages when a nearby player puts on his mask
 + Added data saving. Logging in/out will not change your status
 + Added Metrics
 + Added PVP handling, Neutral players can't attack each other
 + Added chat and death-message functionality, Assassins' names will be hidden
 + Added location saving. Assassins will get teleported to the location where they put on their mask.
 + Added command to check if you're an Assassin and for how long
 + Added command to spawn mask(s)
 + Added command to refresh cooldown time
 + Added command to deactivate assassin mode
 + Added download dependency. Assassin automatically downloads TagAPI if not found.