@@ -1,5 +1,6 @@
 package com.me.tft_02.assassin.Listeners;
 
+import org.bukkit.ChatColor;
 import org.bukkit.Effect;
 import org.bukkit.Material;
 import org.bukkit.entity.AnimalTamer;
@@ -61,9 +62,13 @@ public class EntityListener implements Listener {
 
             if (attacker instanceof Player) {
                 if (data.bothNeutral(defendingPlayer, (Player) attacker) && Assassin.getInstance().getConfig().getBoolean("Assassin.prevent_neutral_pvp")) {
+                    ((Player) attacker).sendMessage(ChatColor.DARK_RED + "You are not an Assassin.");
                     event.setCancelled(true);
                     return;
                 } else {
+                    if (event.isCancelled() && Assassin.getInstance().getConfig().getBoolean("Assassin.override_pvp_prevention")) {
+                        event.setCancelled(false);
+                    }
                     if (Assassin.getInstance().getConfig().getBoolean("Assassin.particle_effects")) {
                         defendingPlayer.getWorld().playEffect(defendingPlayer.getLocation(), Effect.STEP_SOUND, Material.REDSTONE_WIRE);
                     }
