@@ -29,6 +29,7 @@ Version 1.1 | Tested on CB 1.4.5-R1.0
  + Added config option to allow neutral pvp (pvp between non assassins)
  + Added config option to disable teleportation when Assassin Mode deactivates
  + Added config option to disable (teleport) commands when an Assassin
+ + Added config option to allow PvP in no-PvP zones set by other plugins (WorldGuard, Towny)
  - Removed status message when joining the game as a Neutral player
 
 
